[gd_scene load_steps=13 format=3 uid="uid://dg5uxs8qt1qbc"]

[ext_resource type="Script" path="res://microjogos/2023S1/projeto-brabesf/cenas/scripts/main.gd" id="1_fhjug"]
[ext_resource type="Texture2D" uid="uid://dgkpur2irlsp4" path="res://microjogos/2023S1/projeto-brabesf/recursos/sprites/5586989.jpg" id="2_q1nam"]
[ext_resource type="Texture2D" uid="uid://cce878bie0clp" path="res://microjogos/2023S1/projeto-brabesf/recursos/sprites/Cards.png" id="3_vc2bu"]
[ext_resource type="Texture2D" uid="uid://mx2xp2nicnnd" path="res://microjogos/2023S1/projeto-brabesf/recursos/sprites/orange.png" id="4_u6h1q"]
[ext_resource type="AudioStream" uid="uid://dsg6akev0gecn" path="res://microjogos/2023S1/projeto-brabesf/recursos/sounds/def.wav" id="6_g31jd"]
[ext_resource type="Texture2D" uid="uid://b66e5nnnnmg11" path="res://icon.png" id="8_q2a2p"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kxy71"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x8j7w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_42qcv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gdp0o"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ek8cn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_elkgu"]

[node name="Main" type="Node2D"]
script = ExtResource("1_fhjug")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(8, -7.62939e-06)
scale = Vector2(35.0417, 24.3404)
anchor_mode = 0

[node name="Fundo" type="StaticBody2D" parent="."]
position = Vector2(488, 504)
scale = Vector2(2.027, 2.214)

[node name="Sprite2D" type="Sprite2D" parent="Fundo"]
position = Vector2(232.856, 18.0668)
scale = Vector2(0.314721, 0.244246)
texture = ExtResource("2_q1nam")

[node name="Card11" type="StaticBody2D" parent="."]
position = Vector2(608, 504)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card11"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card11"]
position = Vector2(-124.744, -79.2683)
scale = Vector2(0.326, 0.323)
texture = ExtResource("4_u6h1q")

[node name="Card12" type="StaticBody2D" parent="."]
position = Vector2(1048, 496)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card12"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card12"]
position = Vector2(-128, -80)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_kxy71")

[node name="Card13" type="StaticBody2D" parent="."]
position = Vector2(1496, 504)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card13"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card13"]
position = Vector2(-128, -80)
scale = Vector2(0.33, 0.33)
texture = SubResource("CompressedTexture2D_x8j7w")

[node name="Card21" type="StaticBody2D" parent="."]
position = Vector2(600, 776)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card21"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card21"]
position = Vector2(-128, -80)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_kxy71")

[node name="Card22" type="StaticBody2D" parent="."]
position = Vector2(1048, 776)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card22"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card22"]
position = Vector2(-128, -80)
scale = Vector2(0.219, 0.219)
texture = SubResource("CompressedTexture2D_42qcv")

[node name="Card23" type="StaticBody2D" parent="."]
position = Vector2(1496, 776)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card23"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card23"]
position = Vector2(-128, -80)
scale = Vector2(0.33, 0.33)
texture = SubResource("CompressedTexture2D_gdp0o")

[node name="Card31" type="StaticBody2D" parent="."]
position = Vector2(608, 1072)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card31"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card31"]
position = Vector2(-128, -80)
scale = Vector2(0.33, 0.33)
texture = SubResource("CompressedTexture2D_ek8cn")

[node name="Card32" type="StaticBody2D" parent="."]
position = Vector2(1032, 1072)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card32"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card32"]
position = Vector2(-128, -80)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_kxy71")

[node name="Card33" type="StaticBody2D" parent="."]
position = Vector2(1496, 1072)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card33"]
position = Vector2(-128, -80)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card33"]
position = Vector2(-128, -80)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_kxy71")

[node name="Card14" type="StaticBody2D" parent="."]
position = Vector2(1928, 504)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card14"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card14"]
position = Vector2(-130.241, -76.3638)
scale = Vector2(0.0355759, 0.0282962)
texture = SubResource("CompressedTexture2D_elkgu")

[node name="Card24" type="StaticBody2D" parent="."]
position = Vector2(1928, 768)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card24"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card24"]
position = Vector2(-128, -80)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_kxy71")

[node name="Card34" type="StaticBody2D" parent="."]
position = Vector2(1920, 1088)
scale = Vector2(2.437, 2.624)

[node name="back2D" type="Sprite2D" parent="Card34"]
position = Vector2(-126.125, -82.8515)
scale = Vector2(0.75, 0.711)
texture = ExtResource("3_vc2bu")

[node name="fruit2D" type="Sprite2D" parent="Card34"]
position = Vector2(-128, -80)
scale = Vector2(0.33, 0.33)
texture = SubResource("CompressedTexture2D_ek8cn")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(1592, 864)
scale = Vector2(2.027, 2.214)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("8_q2a2p")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g31jd")
volume_db = 1.92

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
